0.8.8 (12.10.2018)
================
* small bugfixes and performance improvement
* 'from_text' renamed to 'text_to_columns'
* 'by_groups' is deprecated now. Use 'take' from 'maditr' instead.
* 'dtfrm'/'as.dtfrm' are finally removed. Use 'sheet'/'as.sheet' instead
* It seems nobody uses 'lst'/'.lst' functions so they are removed.    



0.8.7 (12.06.2018)
================
* fix long-standing bug with broken html rendering in knitr (issue #6)
* add '..p' and '..f' - perl regular expression/fixed pattern selectors. Also 'mrset_p', 'mrset_f', 'mdset_p', 'mdset_f' are provided.
* add ..data shortcut for entire data.frame in 'use_labels'
* fix awful bug with incorrect nesting multiple response on multiple response ('nest' function)
* more exports from data.table
* fix 'add_columns' for data.table
* fix 'do_if' for data.table
* fix 'w_cor' - now diag elements always equal to one 
* add 'split_by' - alias for 'split_separate'

0.8.6 (24.01.2018)
================
* fix tests for systems with no long doubles support
* new arguments and small improvements in 'write_labelled_csv'/'write_labelled_sps'
* minor fixes
* change 'vlookup'/'vlookup_df' behavior - now it also matches on NA
* 'datatable' is deprecated. Use as.datatable_widget instead.
* move DT and htmltools dependencies from Imports to Suggests
* new function 'add_columns' which is inspired by MATCH FILES (Add variables...) from SPSS Statistics

0.8.4 (11.12.2017)
================
* compatibility with new version of htmlTable package
* minor fixes

0.8.3 (06.11.2017)
================
* add 'calc_cro_*' functions family
* minor fixes
* compatibility with new version of 'testthat' package

0.8.2 (26.09.2017)
================
* fix bug with single column "mrset"
* fix bug with significance tests on tables with complex headers
* add uboxing possibilities for ..[] (..[] = list/data.frame will create separate variables from that list/data.frame)
* add 'text_to_columns' for creation data.frame from text lines