@@ -424,6 +424,7 @@ export(except)
 export(expss_digits)
 export(expss_disable_value_labels_support)
 export(expss_enable_value_labels_support)
+export(expss_enable_value_labels_support_extreme)
 export(expss_fix_encoding_off)
 export(expss_fix_encoding_on)
 export(expss_output_commented)
